@@ -1,0 +1,39 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
+        <title></title>
+    </head>
+    <body lang="en-US" dir="ltr">
+        <p align="center"><font size="7" style="font-size: 36pt">
+                Software Defined WAN</font></p>
+        <p><br/>
+            <br/>
+
+        </p>
+        <p><font size="7" style="font-size: 36pt">this is a clear text protocol.<br/>
+            </font><br/>
+            <br/>
+
+        </p>
+        <p><font size="7" style="font-size: 36pt">
+                there are these types
+                of messages:<br/>
+                -sdwan<br/>
+                -okay<br/>
+                -hello<br/>
+                -username &lt;text&gt;<br/>
+                -software &lt;text&gt;<br/>
+                -middleware &lt;text&gt;<br/>
+                -hardware &lt;text&gt;<br/>
+                -kernel &lt;text&gt;<br/>
+                -needaddr &lt;true&gt; &lt;ipv6&gt;<br/>
+                -myaddr &lt;ipv4&gt; &lt;ipv6&gt;<br/>
+                -echo &lt;text&gt;<br/>
+                -echoed &lt;text&gt;<br/>
+            </font><br/>
+            <br/>
+
+        </p>
+    </body>
+</html>
