@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.10-cur, done by cs@nop.
--;-;-;2022-03-10 05:40:31, took 00:07:34, with 100 workers, on 2776 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2022-03-10 06:22:46, took 00:08:21, with 100 workers, on 2778 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2774,6 +2774,8 @@ http://sources.nop.hu/cfg/serv-radius.tst;serv-radius.tst;success;radius server
 http://sources.nop.hu/cfg/serv-scheduler.tst;serv-scheduler.tst;success;scheduler
 http://sources.nop.hu/cfg/serv-sdwan01.tst;serv-sdwan01.tst;success;sdwan over ipv4
 http://sources.nop.hu/cfg/serv-sdwan02.tst;serv-sdwan02.tst;success;sdwan over ipv6
+http://sources.nop.hu/cfg/serv-sdwan03.tst;serv-sdwan03.tst;success;sdwan with fixed addresses
+http://sources.nop.hu/cfg/serv-sdwan04.tst;serv-sdwan04.tst;success;sdwan hub and spoke
 http://sources.nop.hu/cfg/serv-socks4.tst;serv-socks4.tst;success;socks4 server
 http://sources.nop.hu/cfg/serv-socks5.tst;serv-socks5.tst;success;socks5 server
 http://sources.nop.hu/cfg/serv-tacacs.tst;serv-tacacs.tst;success;tacacs server
