@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.10-cur, done by cs@nop.<br/>
-tested: 2022-03-10 05:40:31, took 00:07:34, with 100 workers, on 2776 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2022-03-10 06:22:46, took 00:08:21, with 100 workers, on 2778 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2787,6 +2787,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-scheduler.tst">serv-scheduler.tst</a></td><td>success</td><td>scheduler</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-sdwan01.tst">serv-sdwan01.tst</a></td><td>success</td><td>sdwan over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-sdwan02.tst">serv-sdwan02.tst</a></td><td>success</td><td>sdwan over ipv6</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/serv-sdwan03.tst">serv-sdwan03.tst</a></td><td>success</td><td>sdwan with fixed addresses</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/serv-sdwan04.tst">serv-sdwan04.tst</a></td><td>success</td><td>sdwan hub and spoke</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-socks4.tst">serv-socks4.tst</a></td><td>success</td><td>socks4 server</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-socks5.tst">serv-socks5.tst</a></td><td>success</td><td>socks5 server</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-tacacs.tst">serv-tacacs.tst</a></td><td>success</td><td>tacacs server</td></tr>
